--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "html-react-parser": "^1.4.10",
+    "lightweight-charts": "^3.8.0",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^18.0.0",
