--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-ts-tradingview-widgets": "^1.0.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
