--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@coinranking/exchanges": "^3.78.1",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.19.5",
-    "axios": "^0.26.1",
-    "chart.js": "^3.7.1",
-    "html-react-parser": "^1.4.10",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.39",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "antd": "^4.21.0",
+    "html-react-parser": "^1.4.14",
     "lightweight-charts": "^3.8.0",
     "millify": "^4.0.0",
-    "moment": "^2.29.1",
-    "react": "^18.0.0",
-    "react-chartjs-2": "^3.0.4",
-    "react-dom": "^18.0.0",
-    "react-redux": "^7.2.8",
+    "moment": "^2.29.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "react-ts-tradingview-widgets": "^1.0.10",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
