--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react-dom": "^18.0.5",
     "antd": "^4.21.0",
     "html-react-parser": "^1.4.14",
-    "lightweight-charts": "^3.8.0",
     "millify": "^4.0.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
@@ -22,6 +21,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-ts-tradingview-widgets": "^1.0.10",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
