--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_RAPIDAPI_KEY=449ece1bedmsh44664fa38cb935ap17810ejsn3d3db2fe6ce0
+REACT_APP_RAPIDAPI_KEY="449ece1bedmsh44664fa38cb935ap17810ejsn3d3db2fe6ce0"
