--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-html-parser": "^2.0.2",
     "antd": "^4.21.0",
     "html-react-parser": "^1.4.14",
     "millify": "^4.0.0",
