--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@types/react-html-parser": "^2.0.2",
+    "antd": "^5.2.3",
+    "html-react-parser": "^3.0.9",
+    "plop": "^3.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.8.2",
+    "react-ts-tradingview-widgets": "^1.0.14",
+    "zustand": "^4.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
