--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_RAPIDAPI_KEY=449ece1bedmsh44664fa38cb935ap17810ejsn3d3db2fe6ce0
 REACT_APP_BASE_URL=https://coinranking1.p.rapidapi.com
+REACT_APP_API_HOST=coinranking1.p.rapidapi.com
+REACT_APP_API_KEY=438453db08msh13e95ef36bcb8fbp104745jsnc8f8ac4aa394
