--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "crpyocurrency-ts",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,19 +11,20 @@
     "@types/node": "^16.18.13",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@ant-design/icons": "^5.0.1",
     "@types/react-html-parser": "^2.0.2",
     "antd": "^5.2.3",
+    "axios": "^1.3.4",
     "html-react-parser": "^3.0.9",
+    "lodash": "^4.17.21",
     "plop": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
+    "react-scripts": "5.0.1",
     "react-ts-tradingview-widgets": "^1.0.14",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
     "zustand": "^4.3.5"
   },
   "scripts": {
@@ -49,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191"
   }
 }
